airflowXcom/logs/dag_id=airflow-postgres-dag/run_id=manual__2024-02-07T12:39:21.380760+00:00/task_id=save_valid_candidates_to_new_table/attempt=1.log
[2024-02-07T12:39:33.625+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: airflow-postgres-dag.save_valid_candidates_to_new_table manual__2024-02-07T12:39:21.380760+00:00 [queued]>
[2024-02-07T12:39:33.635+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: airflow-postgres-dag.save_valid_candidates_to_new_table manual__2024-02-07T12:39:21.380760+00:00 [queued]>
[2024-02-07T12:39:33.636+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 2
[2024-02-07T12:39:33.657+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): save_valid_candidates_to_new_table> on 2024-02-07 12:39:21.380760+00:00
[2024-02-07T12:39:33.665+0000] {standard_task_runner.py:60} INFO - Started process 5901 to run task
[2024-02-07T12:39:33.673+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', '***-postgres-dag', 'save_valid_candidates_to_new_table', 'manual__2024-02-07T12:39:21.380760+00:00', '--job-id', '258', '--raw', '--subdir', 'DAGS_FOLDER/election_dag.py', '--cfg-path', '/tmp/tmpdlwccrrb']
[2024-02-07T12:39:33.676+0000] {standard_task_runner.py:88} INFO - Job 258: Subtask save_valid_candidates_to_new_table
[2024-02-07T12:39:33.744+0000] {task_command.py:423} INFO - Running <TaskInstance: airflow-postgres-dag.save_valid_candidates_to_new_table manual__2024-02-07T12:39:21.380760+00:00 [running]> on host 4775ae97916b
[2024-02-07T12:39:33.865+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='El_mboup' AIRFLOW_CTX_DAG_ID='***-postgres-dag' AIRFLOW_CTX_TASK_ID='save_valid_candidates_to_new_table' AIRFLOW_CTX_EXECUTION_DATE='2024-02-07T12:39:21.380760+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-02-07T12:39:21.380760+00:00'
[2024-02-07T12:39:33.877+0000] {logging_mixin.py:188} INFO - La valeur est comprise entre 2 et 7. Création d'une nouvelle table pour les candidats valides.
[2024-02-07T12:39:33.887+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: ...es_presidentielle WHERE satut_validation = 'validée' LIMIT ;
                                                                      ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/election_dag.py", line 122, in make_decision_based_on_value
    engine.execute(f"CREATE TABLE IF NOT EXISTS new_valid_candidates AS SELECT * FROM candidatures_presidentielle WHERE satut_validation = 'validée' LIMIT ;")
  File "<string>", line 2, in execute
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/util/deprecations.py", line 468, in warned
    return fn(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/base.py", line 3267, in execute
    return connection.execute(statement, *multiparams, **params)
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/base.py", line 1370, in execute
    return self._exec_driver_sql(
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/base.py", line 1674, in _exec_driver_sql
    ret = self._execute_context(
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.8/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near ";"
LINE 1: ...es_presidentielle WHERE satut_validation = 'validée' LIMIT ;
                                                                      ^

[SQL: CREATE TABLE IF NOT EXISTS new_valid_candidates AS SELECT * FROM candidatures_presidentielle WHERE satut_validation = 'validée' LIMIT ;]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2024-02-07T12:39:33.917+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=***-postgres-dag, task_id=save_valid_candidates_to_new_table, execution_date=20240207T123921, start_date=20240207T123933, end_date=20240207T123933
[2024-02-07T12:39:33.943+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 258 for task save_valid_candidates_to_new_table ((psycopg2.errors.SyntaxError) syntax error at or near ";"
LINE 1: ...es_presidentielle WHERE satut_validation = 'validée' LIMIT ;
                                                                      ^

[SQL: CREATE TABLE IF NOT EXISTS new_valid_candidates AS SELECT * FROM candidatures_presidentielle WHERE satut_validation = 'validée' LIMIT ;]
(Background on this error at: https://sqlalche.me/e/14/f405); 5901)
[2024-02-07T12:39:33.976+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-07T12:39:34.002+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
